--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "db:gen-migration": "drizzle-kit generate:pg --schema=src/db/schema.ts --out=migrations",
+    "db:gen-migration-blank": "drizzle-kit generate:pg --schema=src/db/schema.ts --out=migrations --custom",
+    "db:introspect": "drizzle-kit introspect:pg --out=src/dba --driver=pg --introspect-casing=camel --connectionString=postgresql://postgres:password@localhost:5432/rocketlab",
+    "db:migrate": "drizzle-kit migrate"
   },
   "keywords": [],
   "author": "",
@@ -15,13 +19,17 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.2",
     "concurrently": "^8.2.0",
+    "drizzle-kit": "^0.19.2",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.27.0",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.0",
+    "postgres": "^3.3.5",
     "zod": "^3.21.4"
   }
 }
