--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "db:gen-migration": "drizzle-kit generate:pg --schema=src/db/schema.ts --out=migrations",
     "db:gen-migration-blank": "drizzle-kit generate:pg --schema=src/db/schema.ts --out=migrations --custom",
-    "db:introspect": "drizzle-kit introspect:pg --out=src/dba --driver=pg --introspect-casing=camel --connectionString=postgresql://postgres:password@localhost:5432/rocketlab",
+    "db:introspect": "drizzle-kit introspect:pg --out=src/db --driver=pg --introspect-casing=camel --connectionString=postgresql://postgres:password@localhost:5432/rocketlab",
     "db:migrate": "drizzle-kit migrate"
   },
   "keywords": [],
@@ -24,12 +24,14 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "chance": "^1.1.11",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.27.0",
     "drizzle-zod": "^0.4.4",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "postgres": "^3.3.5",
     "zod": "^3.21.4"
   }
